# Monitoring-System

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  config.json
Client/ClientUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Client/build-ClientUI-Desktop-Debug/: CMakeCache.txt  ClientUI  cmake_install.cmake  config.json
Client/build-ClientUI-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-57677c28bb3b30ee4308.json  cmakeFiles-v1-c2ba9ee6195330fe3617.json  cmakeFiles-v1-d4d4234fd5fea7981cc8.json  cmakeFiles-v1-db6c792f07ad1f727f0f.json  codemodel-v2-a07e9c7baf4cbbcc1d5e.json  index-2024-03-22T07-20-28-0318.json  index-2024-04-01T07-26-37-0553.json  target-ClientUI-Debug-6bfb16accb3174e278c8.json
Client/build-ClientUI-Desktop-Debug/.cmake/api/v1/reply.prev/: target-ClientUI_autogen-Debug-4d4f7b5074d20f57344c.json
Client/build-ClientUI-Desktop-Debug/ClientUI_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
Client/include/: client.h  sys_info.h
Client/src/: client.cpp  main.cpp  sys_info.cpp
Server/: CMakeLists.txt  config.json
Server/ServerUI/: CMakeLists.txt  datawindow.cpp  datawindow.h  graphwindow.cpp  graphwindow.h  main.cpp  mainwindow.cpp  mainwindow.h
Server/build-ServerUI-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  ServerUI  cmake_install.cmake
Server/build-ServerUI-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-6c6102f444755bcfbeca.json  cmakeFiles-v1-6a8625942ea474a9598b.json  cmakeFiles-v1-818c21575161e0865ada.json  cmakeFiles-v1-c06baabe7eee1d6ed656.json  codemodel-v2-8774c272be41d00e64fc.json  index-2024-03-22T07-19-34-0351.json  index-2024-04-02T08-31-57-0270.json  target-ServerUI-Debug-0becaf1ad24e119409f5.json  target-ServerUI-Debug-892899775a397e9c0e11.json
Server/build-ServerUI-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-3887e80238bf06703450.json  codemodel-v2-98238ca6ac1ea1338001.json  codemodel-v2-fce0683a30b296efd53e.json  index-2024-04-02T05-23-09-0914.json  target-ServerUI-Debug-ff4a1b904663466bc7b5.json  target-ServerUI_autogen-Debug-e921b9fdc7397b3ee002.json
Server/build-ServerUI-Desktop-Debug/ServerUI_autogen/: mocs_compilation.cpp
Server/build-ServerUI-Desktop-Debug/ServerUI_autogen/EWIEGA46WW/: moc_datawindow.cpp.d  moc_graphwindow.cpp.d  moc_mainwindow.cpp.d
Server/build-ServerUI-Desktop-Release/: CMakeCache.txt
Server/include/: DatabaseInitializer.h  server.h
Server/src/: DatabaseConnector.cpp  DatabaseHandler.cpp  DatabaseInitializer.cpp  DbStructure.cpp  main.cpp  server.cpp
